RESOLVED FIXED45949
getPropertyValue('border') is incorrect after border-top-width is set
https://bugs.webkit.org/show_bug.cgi?id=45949
Summary getPropertyValue('border') is incorrect after border-top-width is set
James Kozianski
Reported 2010-09-17 00:04:11 PDT
getPropertyValue('border') is incorrect after border-top-width is set
Attachments
Patch (4.55 KB, patch)
2010-09-17 00:14 PDT, James Kozianski
no flags
Patch (4.57 KB, patch)
2010-09-27 18:55 PDT, James Kozianski
no flags
James Kozianski
Comment 1 2010-09-17 00:14:35 PDT
Adam Barth
Comment 2 2010-09-26 22:30:34 PDT
Comment on attachment 67888 [details] Patch This seems correct. It's a bit outside of my area, but it seems safe enough.... (Famous last words?)
Adam Barth
Comment 3 2010-09-27 00:28:45 PDT
Comment on attachment 67888 [details] Patch There be tabs in here.
James Kozianski
Comment 4 2010-09-27 18:55:24 PDT
WebKit Commit Bot
Comment 5 2010-10-07 17:16:23 PDT
Comment on attachment 69007 [details] Patch Clearing flags on attachment: 69007 Committed r69357: <http://trac.webkit.org/changeset/69357>
WebKit Commit Bot
Comment 6 2010-10-07 17:16:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.