2010-10-07  James Kozianski  <koz@chromium.org>

Reviewed by Adam Barth.

        getPropertyValue('border') is incorrect after border-top-width is set
        https://bugs.webkit.org/show_bug.cgi?id=45949

        CSSMutableStyleDeclaration::getCommonValue() was ignoring values from
        properties that were implicitly set, which led to erroneous results
        from getPropertyValue().

        * fast/dom/css-shorthand-common-value-expected.txt: Added.
        * fast/dom/css-shorthand-common-value.html: Added.
2010-10-07  James Kozianski  <koz@chromium.org>

        Reviewed by Adam Barth.

        getPropertyValue('border') is incorrect after border-top-width is set
        https://bugs.webkit.org/show_bug.cgi?id=45949

        Test: fast/dom/css-shorthand-common-value.html

        CSSMutableStyleDeclaration::getCommonValue() was ignoring values from
        properties that were implicitly set, which led to erroneous results
        from getPropertyValue().

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::getCommonValue):

Canonical link: https://commits.webkit.org/59958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69357 268f45cc-cd09-0410-ab3c-d52691b4dbfc